# app/Http/Controllers/API/ProductController.php
@@ -489,7 +489,6 @@ class ProductController extends Controller
      *                 @OA\Property(property="id_category", type="integer", example=1),
      *                 @OA\Property(property="price", type="number", example=1000000),
      *                 @OA\Property(property="image", type="string", format="binary"),
-     *                 @OA\Property(property="rating", type="integer", example=5),
      *                 @OA\Property(property="gender", type="string", example="Nữ"),
      *                 @OA\Property(property="volume", type="integer", example=100),
      *                 @OA\Property(property="type", type="string", example="Quartz"),
@@ -531,7 +530,6 @@ class ProductController extends Controller
             'id_category' => 'sometimes|integer|exists:categories,id_category',
             'price' => 'sometimes|numeric|min:0',
             'image' => 'sometimes|image|mimes:jpg,jpeg,png,webp,avif|max:2048',
-            'rating' => 'sometimes|integer|min:0|max:5',
             'gender' => 'sometimes|string',
             'volume' => 'sometimes|integer',
             'type' => 'sometimes|string',
