# storage/api-docs/api-docs.json
@@ -1717,10 +1717,6 @@
                                         "type": "string",
                                         "format": "binary"
                                     },
-                                    "rating": {
-                                        "type": "integer",
-                                        "example": 5
-                                    },
                                     "gender": {
                                         "type": "string",
                                         "example": "Nữ"
